--- a/01_agama/samyukta/02/SA2_123-125.md
+++ b/01_agama/samyukta/02/SA2_123-125.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 2. The Sense Fields | 123-125 (230). Samṛddhi (1-3)'
 type: kramdown
 base: ../../../
-previous: SA2_81-92.html
+previous: SA2_97.html
 next: SA2_126.html
 ---
 
