--- a/01_agama/samyukta/02/SA2_81-92.md
+++ b/01_agama/samyukta/02/SA2_81-92.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 2. The Sense Fields | 81-84 (208). The Inner Se
 type: kramdown
 base: ../../../
 previous: SA2_80.html
-next: SA2_123-125.html
+next: SA2_93.html
 ---
 
 <h1><a href='../index.html'>The Related Discourses</a></h1>
@@ -19,7 +19,7 @@ next: SA2_123-125.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c8'>爾時，世尊告諸比丘： 「過去、未來眼無常。 況現在眼？ 多聞聖弟子如是觀者不顧過去眼，不欣未來眼，於現在眼厭。 不樂、離欲、向厭。 耳、鼻、舌、身、意亦復如是。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “The eye in the past and future is [81] impermanent … [82] painful … [83] empty … [84] not self. Wouldn’t that be the case for the eye in the present, too? The well-versed noble disciple who contemplates in this way doesn’t look back at the eye in the past, doesn’t anticipate the eye in the future, and becomes disillusioned with the eye in the present. They don’t enjoy it, become free of desire for it, and are disillusioned with the eye. <em>The ear, nose, tongue, body, and mind are likewise.</em>”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “The eye in the past and future is [81] impermanent … [82] painful … [83] empty … [84] not self. Wouldn’t that be the case for the eye in the present, too? The well-versed noble disciple who contemplates in this way doesn’t look back at the eye in the past, doesn’t anticipate the eye in the future, and becomes disillusioned with the eye in the present. They don’t enjoy it, become free of desire for it, and turn towards its cessation.<sup id="ref2"><a href="#n2">2</a></sup> <em>The ear, nose, tongue, body, and mind are likewise.</em>”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c12'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
@@ -43,7 +43,7 @@ next: SA2_123-125.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c15'></td>
-    <td id='p5'>2. It was then that the Bhagavān addressed the monks, “Form in the past and future is [85] impermanent … [86] painful … [87] empty … [88] not self. Wouldn’t that be the case for form in the present, too? The well-versed noble disciple who contemplates in this way doesn’t look back at form in the past, doesn’t anticipate form in the future, and becomes disillusioned with form in the present. They don’t enjoy it, become free of desire for it, and are disillusioned with it. <em>Sound, odor, flavor, touch, and ideas are likewise.</em>”</td>
+    <td id='p5'>2. It was then that the Bhagavān addressed the monks, “Form in the past and future is [85] impermanent … [86] painful … [87] empty … [88] not self. Wouldn’t that be the case for form in the present, too? The well-versed noble disciple who contemplates in this way doesn’t look back at form in the past, doesn’t anticipate form in the future, and becomes disillusioned with form in the present. They don’t enjoy it, become free of desire for it, and turn towards its cessation. <em>Sound, odor, flavor, touch, and ideas are likewise.</em>”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c15'></td>
@@ -59,7 +59,7 @@ next: SA2_123-125.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c15'></td>
-    <td id='p8'>2. It was then that the Bhagavān addressed the monks, “The eye and form in the past and future are [89] impermanent … [90] painful … [91] empty … [92] not self. Wouldn’t that be the case for the eye and form in the present, too? The well-versed noble disciple who contemplates in this way doesn’t look back at the eye and form in the past, doesn’t anticipate the eye and form in the future, and becomes disillusioned with eye and form in the present. They don’t enjoy them, become free of desire for them, and are disillusioned with them. <em>The ear and sound, nose and odor, tongue and flavor, body and touch, and mind and ideas are likewise.</em>”</td>
+    <td id='p8'>2. It was then that the Bhagavān addressed the monks, “The eye and form in the past and future are [89] impermanent … [90] painful … [91] empty … [92] not self. Wouldn’t that be the case for the eye and form in the present, too? The well-versed noble disciple who contemplates in this way doesn’t look back at the eye and form in the past, doesn’t anticipate the eye and form in the future, and becomes disillusioned with eye and form in the present. They don’t enjoy them, become free of desire for them, and turn towards its cessation. <em>The ear and sound, nose and odor, tongue and flavor, body and touch, and mind and ideas are likewise.</em>”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c15'></td>
@@ -74,10 +74,12 @@ next: SA2_123-125.html
 <ol class="notes-list">
 <li id="n1"><p>This is <em>sūtra</em> no. 208 in the <cite>Taisho</cite> edition and nos. 259-270 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052c07" target="_blank">T99.2.52c7-16</a>). The variant notes at the end describe three sets of four <em>sūtra</em>s, so I have partially reconstituted them as three <em>sūtra</em>s with an abbreviation embedded in each.</p>
 <p>These <em>sūtra</em>s are parallel to <a href="https://suttacentral.net/sn35.186" target="_blank">SN 35.186-194</a> and <a href="https://suttacentral.net/sn35.7" target="_blank">SN 35.7-12</a>. SN 35.7-12 match the template better, but that set of <em>sutta</em>s doesn’t combine inner and outer sense fields. SN 35.186-194 only treat the impermanence of the inner and outer sense fields and has separate <em>sutta</em>s for the past, future, and present, respectively. Those <em>sutta</em>s belong to a group that begins at SN 35.160 that were located at Jīvaka’s Mango Grove, so it seems likely that there is a direct relationship with SĀ 2.81-92. They may all form a large group of variations of a few older <em>sūtra</em>s. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>turn towards its cessation</em>. C. <span class="ch">向厭</span>. Yinshun amended <span class="ch">向厭</span> to <span class="ch">向滅</span>, and I concur after reviewing similar passages. Disillusionment leads to freedom from desire for something (e.g. one of the aggregates) and ends with cessation or inner peace. [<a href="#ref2">back</a>]</p></li>
 </ol>
+
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 6 February 2025</p>
+<p class='revised'>Last Revised: 15 April 2025</p>
 
 <hr/>
