--- a/01_agama/samyukta/02/SA2_96.md
+++ b/01_agama/samyukta/02/SA2_96.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 2. The Sense Fields | 96 (212). The Careful Practice'
 type: kramdown
 base: ../../../
-revious: SA2_95.html
+previous: SA2_95.html
 next: SA2_97.html
 ---
 
