Corrections of various kinds

--- a/01_agama/dirgha/DA_12.md
+++ b/01_agama/dirgha/DA_12.md
@@ -39,7 +39,7 @@ The monks then accepted the teaching and listened.
 9\. “What are two things that lead to good destinies? One is perfecting the precepts, and the second is perfecting [right] view.
 {:#p9}
 
-10\. “What are the two things that lead to <em>nirvāṇa</em>? One is calmness, and the second in contemplation.
+10\. “What are two things that lead to <em>nirvāṇa</em>? One is calmness, and the second in contemplation.
 {:#p10}
 
 11\. “Again, there are three things that lead to bad destinies, three things that lead to good destinies, and three things that lead to <em>nirvāṇa</em>.
@@ -105,7 +105,7 @@ The monks then accepted the teaching and listened.
 31\. “Again, there are eight things that lead to bad destinies, eight things that lead to good destinies, and eight things that lead to <em>nirvāṇa</em>.
 {:#p31}
 
-32\. “What are eight things that lead to bad destinies? They are the eight wrong practices: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong samādhi.
+32\. “What are eight things that lead to bad destinies? They are the eight wrong practices: wrong view, wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong samādhi.
 {:#p32}
 
 33\. “What are eight things that lead to good destinies? They are the mundane right practices: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
