--- a/01_agama/samyukta/01/SA1_39.md
+++ b/01_agama/samyukta/01/SA1_39.md
@@ -42,7 +42,7 @@ next: SA1_40.html
     <td id='p5'>5. “What is it that they don’t know?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.64c2'>「謂色無常，色無常如實不知。色磨滅法，色磨滅法如實不知。色生滅法，色生滅法如實不知。受、想、行、識，受、想、行、識無常如實不知。識磨滅法，識磨滅法如實不知。識生滅法，識生滅法如實不知。摩訶拘絺羅！於此五受陰如實不知、不見、無無間等、愚、闇、不明，是名無明，成就此者，名有無明。」</td>
+    <td class="ch" title='t99.2.64c2'>「謂色無常，色無常如實不知。色磨滅法，色磨滅法如實不知。色生滅法，色生滅法如實不知。受、想、行、識⋯受、想、行、識無常如實不知。識磨滅法，識磨滅法如實不知。識生滅法，識生滅法如實不知。摩訶拘絺羅，於此五受陰如實不知、不見、無無間等、愚、闇、不明，是名無明，成就此者，名有無明。」</td>
     <td id='p6'>6. “It’s that form is impermanent. They truly don’t know that form is impermanent. Form is something that erodes. They truly don’t know that form is something that erodes. Form is something that arises and ceases. They truly don’t know that form is something that arises and ceases. Feeling … conception … volition … awareness [is impermanent.] They truly don’t know that awareness is impermanent. Awareness is something that erodes. They truly don’t know that awareness is something that erodes. Awareness is something that arises and ceases. They truly don’t know that awareness is something that arises and ceases. Mahākauṣṭhila, they truly don’t know these five acquired aggregates. They don’t see and have no direct realization of them. They are foolish, benighted, and aren’t insightful. This is called ignorance. Someone who achieves this is called ignorant.”</td>
   </tr>
   <tr>
@@ -50,7 +50,7 @@ next: SA1_40.html
     <td id='p7'>7. Mahākauṣṭhila asked, “Śāriputra, there’s that term ‘insight.’ What is insight? Who possesses this insight?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.64c9'>舍利弗言：「摩訶拘絺羅！所謂明者是知，知者是名為明。」</td>
+    <td class="ch" title='t99.2.64c9'>舍利弗言：「摩訶拘絺羅，所謂明者是知，知者是名為明。」</td>
     <td>Śāriputra said, “Mahākauṣṭhila, the term insight means to know. Someone who knows is called insightful.”</td>
   </tr>
   <tr>
@@ -58,7 +58,7 @@ next: SA1_40.html
     <td id='p8'>8. Mahākauṣṭhila asked, “What is it that they know?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.64c11'>「謂知色無常，知色無常如實知；色磨滅法，色磨滅法如實知；色生滅法，色生滅法如實知。受、想、行、識，受、想、行、識無常如實知，識磨滅法，識磨滅法如實知，識生滅法，識生滅法如實知。拘絺羅！於此五受陰如實知、見、明、覺、慧、無間等，是名為明；成就此法者，是名有明。」</td>
+    <td class="ch" title='t99.2.64c11'>「謂知色無常，知色無常如實知；色磨滅法，色磨滅法如實知；色生滅法，色生滅法如實知。受、想、行、識⋯受、想、行、識無常如實知，識磨滅法，識磨滅法如實知，識生滅法，識生滅法如實知。拘絺羅，於此五受陰如實知、見、明、覺、慧、無間等，是名為明；成就此法者，是名有明。」</td>
     <td id='p9'>9. “It’s that form is impermanent. They truly know that form is impermanent. Form is something that erodes. They truly know that form is something that erodes. Form is something that arises and ceases. They truly know that form is something that arises and ceases. Feeling … conception … volition … awareness [is impermanent.] They truly know that awareness is impermanent. Awareness is something that erodes. They truly know that awareness is something that erodes. Awareness is something that arises and ceases. They truly know that awareness is something that arises and ceases. Kauṣṭhila, they truly know these five acquired aggregates. They see and have insight about them. They are aware, wise, and directly realize it. This is called insight. Someone who achieves this is called insightful.”</td>
   </tr>
   <tr>
