--- a/01_agama/samyukta/01/SA1_42.md
+++ b/01_agama/samyukta/01/SA1_42.md
@@ -42,7 +42,7 @@ next: SA1_43.html
     <td id='p6'>6. Mahākauṣṭhila also asked, “Śāriputra, suppose he wants to realize the fruit of once-returning after realizing the fruit of stream entry. What teaching will he contemplate?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.65b19'>舍利弗言：「拘絺羅！已得須陀洹果證已，欲得斯陀含果證者，亦當精勤思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？是所應處故。若比丘於此五受陰精勤思惟，得斯陀含果證。」</td>
+    <td class="ch" title='t99.2.65b19'>舍利弗言：「拘絺羅，已得須陀洹果證已，欲得斯陀含果證者，亦當精勤思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？是所應處故。若比丘於此五受陰精勤思惟，得斯陀含果證。」</td>
     <td id='p7'>7. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of once-returning after realizing the fruit of stream entry should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of once-returning.”</td>
   </tr>
   <tr>
@@ -50,7 +50,7 @@ next: SA1_43.html
     <td id='p8'>8. Mahākauṣṭhila asked Śāriputra, “Suppose he wants to realize the fruit of non-returning after realizing the fruit of once-returning. What teaching will he contemplate?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.65b26'>舍利弗言：「拘絺羅！得斯陀含果證已，欲得阿那含果證者，當復精勤思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？是所應處故。若比丘於此五受陰精勤思惟，得阿那含果證。」</td>
+    <td class="ch" title='t99.2.65b26'>舍利弗言：「拘絺羅，得斯陀含果證已，欲得阿那含果證者，當復精勤思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？是所應處故。若比丘於此五受陰精勤思惟，得阿那含果證。」</td>
     <td id='p9'>9. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of non-returning after realizing the fruit of once-returning will also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of non-returning.”</td>
   </tr>
   <tr>
@@ -58,7 +58,7 @@ next: SA1_43.html
     <td id='p10'>10. Mahākauṣṭhila asked Śāriputra, “Suppose he wants to realize the fruit of the <em>arhat</em> after realizing the fruit of non-returning. What teaching will he contemplate?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.65c1'>[>舍利弗言：「拘絺羅！得阿那含果證]已，欲得阿羅漢果證者，當復精勤思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？是所應處故。若比丘於此五受陰法精勤思惟，得阿羅漢果證。」</td>
+    <td class="ch" title='t99.2.65c1'>[>舍利弗言：「拘絺羅，得阿那含果證]已，欲得阿羅漢果證者，當復精勤思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？是所應處故。若比丘於此五受陰法精勤思惟，得阿羅漢果證。」</td>
     <td id='p11'>11. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of the <em>arhat</em> after realizing the fruit of non-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of the <em>arhat</em>.”</td>
   </tr>
   <tr>
@@ -66,7 +66,7 @@ next: SA1_43.html
     <td id='p12'>12. Mahākauṣṭhila asked Śāriputra, “What teaching does he contemplate after attaining the fruit of the <em>arhat</em>?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.65c7'>舍利弗言：「摩訶拘絺羅！阿羅漢亦復思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？為得未得故，證未證故，見法樂住故。」</td>
+    <td class="ch" title='t99.2.65c7'>舍利弗言：「摩訶拘絺羅，阿羅漢亦復思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？為得未得故，證未證故，見法樂住故。」</td>
     <td id='p13'>13. Śāriputra replied, “Mahākauṣṭhila, an <em>arhat</em> also contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because he has attained what he had yet to attain, realized what he had yet to realize, and he lives happily in this life.”</td>
   </tr>
   <tr>
