--- a/01_agama/samyukta/01/SA1_45.md
+++ b/01_agama/samyukta/01/SA1_45.md
@@ -98,7 +98,7 @@ next: SA1_46.html
     <td id='p21'>21. Ānanda said to Chandaka, “Now, you’ve gained a great and good benefit, having obtained the noble wisdom eye of the profound Buddha Dharma.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67a18'>時，二正士展轉隨喜，從[＊]坐而起，各還本處。</td>
+    <td class="ch" title='t125.2.67a18'>時，二正士展轉隨喜，從坐而起，各還本處。</td>
     <td id='p22'>22. Those two proper gentlemen [each heard that teaching and] were in turn delighted by it. They rose from their seats, and each returned to his home.</td>
   </tr>
 <tr>
