--- a/01_agama/samyukta/01/SA1_48.md
+++ b/01_agama/samyukta/01/SA1_48.md
@@ -22,39 +22,39 @@ next: SA1_49.html
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Suppose a clear-eyed man closely examines and discerns a mass of floating foam that was produced by the rapids of a great river. When he closely examines and discerns it, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in that mass of foam.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68c1'>「如是諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？色無堅實故。</td>
+    <td class="ch" title='t125.2.68c1'>「如是諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘，諦觀思惟分別，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？色無堅實故。</td>
     <td id='p3'>3. “So it is with whatever forms that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because forms have no solid substance.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68c8'>「諸比丘！譬如大雨水泡，一起一滅，明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼水泡無堅實故。</td>
+    <td class="ch" title='t125.2.68c8'>「諸比丘，譬如大雨水泡，一起一滅，明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼水泡無堅實故。</td>
     <td id='p4'>4. “Monks, suppose a clear-eyed man closely examines and discerns water bubbles that each appear and then disappear during a heavy rain. When he closely examines and discerns them, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in the water bubbles.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68c8'>「如是，比丘！諸所有受，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以受無堅實故。</td>
+    <td class="ch" title='t125.2.68c8'>「如是，比丘，諸所有受，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘，諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以受無堅實故。</td>
     <td id='p5'>5. “So it is with whatever feelings that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because feelings have no solid substance.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68c17'>「諸比丘！譬如春末夏初，無雲、無雨，日盛中時，野馬流動，明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼野馬無堅實故。</td>
+    <td class="ch" title='t125.2.68c17'>「諸比丘，譬如春末夏初，無雲、無雨，日盛中時，野馬流動，明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼野馬無堅實故。</td>
     <td id='p6'>6. “Monks, suppose that at the end of spring or the beginning of summer a clear-eyed man closely examines, considers, and discerns [the dust of] wild horses drifting on a sunny day without clouds or rain.<sup id="ref3"><a href="#n3">3</a></sup> When he closely examines and discerns it, there is nothing there, no stability, no substance, and nothing solid. Why is that? There is no solid substance in [that dust of] wild horses.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68c17'>「如是，比丘！諸所有想，若過去、若未來、若現在，若內、若外，若麤、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以想無堅實故。</td>
+    <td class="ch" title='t125.2.68c17'>「如是，比丘，諸所有想，若過去、若未來、若現在，若內、若外，若麤、若細，若好、若醜，若遠、若近。比丘，諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以想無堅實故。</td>
     <td id='p7'>7. “So it is with whatever conceptions that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because conceptions have no solid substance.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68c25'>「諸比丘！譬如明目士夫求堅固材，執持利斧，入於山林，見大芭蕉樹，𦟛直長大，即伐其根，斬截其峯，葉葉次剝，都無堅實，諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼芭蕉無堅實故。</td>
+    <td class="ch" title='t125.2.68c25'>「諸比丘，譬如明目士夫求堅固材，執持利斧，入於山林，見大芭蕉樹，𦟛直長大，即伐其根，斬截其峯，葉葉次剝，都無堅實，諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼芭蕉無堅實故。</td>
     <td id='p8'>8. “Monks, suppose a clear-eyed man goes searching for a hardwood tree with an axe in hand. He goes into a mountain forest and sees a large plantain tree that’s balanced, straight, and huge. He attacks its root, chopping it at its peak. He strips off its leaves one after another, but it has no solid core when it’s closely examined, considered, and discerned. When he closely examines, considers, and discerns it, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in that plantain tree.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68c25'>「如是，比丘！諸所有行，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以彼諸行無堅實故。</td>
+    <td class="ch" title='t125.2.68c25'>「如是，比丘，諸所有行，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘，諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以彼諸行無堅實故。</td>
     <td id='p9'>9. “So it is with whatever volitions that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because volitions have no solid substance.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.69a7'>「諸比丘！譬如幻師、若幻師弟子，於四衢道頭，幻作象兵、馬兵、車兵、步兵，有智明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼幻無堅實故。</td>
+    <td class="ch" title='t125.2.69a7'>「諸比丘，譬如幻師、若幻師弟子，於四衢道頭，幻作象兵、馬兵、車兵、步兵，有智明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼幻無堅實故。</td>
     <td id='p10'>10. “Monks, suppose an intelligent and clear-eyed man closely examines, considers, and discerns a troop of elephants, cavalry, chariots, or foot soldiers conjured at the head of a crossroads by an illusionist or an illusionist’s apprentice. When he closely examines, considers, and discerns them, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in those illusions.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.69a7'>「如是，比丘！諸所有識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別，諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以識無堅實故。」</td>
+    <td class="ch" title='t125.2.69a7'>「如是，比丘，諸所有識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘，諦觀思惟分別，諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以識無堅實故。」</td>
     <td id='p11'>11. “So it is with whatever instances of awareness that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because instances of awareness have no solid substance.”</td>
   </tr>
   <tr>
