--- a/01_agama/dirgha/DA_11.md
+++ b/01_agama/dirgha/DA_11.md
@@ -23,7 +23,7 @@ The monks then accepted the teaching and listened.
 3\. The Buddha told the monks, “This is the teaching that increases one by one: There’s one thing to be achieved, one thing to be cultivated, one thing to be recognized, one thing to be ceased, and one thing to be realized.
 {:#p3}
 
-4\. “What’s the one thing to be achieved? It’s not abandoning the good Dharma. What’s the one thing to be cultivated? Constant mindfulness of oneself. What’s the one thing to be recognized? Contaminated contact. What’s the one thing to be ceased? The conceit of having self. What’s the one thing to be realized? It’s the freedom of an unobstructed mind.
+4\. “What’s the one thing to be achieved? It’s not abandoning the good Dharma. What’s the one thing to be cultivated? Constant mindfulness of oneself. What’s the one thing to be recognized? Contaminated contact. What’s the one thing to be ceased? The conceit of having a self. What’s the one thing to be realized? It’s the freedom of an unobstructed mind.
 {:#p4}
 
 #### The Twos
@@ -42,7 +42,7 @@ The monks then accepted the teaching and listened.
 8\. “What are three things to be achieved? First is making good friends. Second is listening to the voice of Dharma. Third is accomplishing [consecutive] teachings.
 {:#p8}
 
-9\. “What are three things to be cultivated? They are the three samādhis: the samādhi of emptiness, the samādhi without attributes, and the samādhi without actions.
+9\. “What are three things to be cultivated? They are the three <em>samādhi</em>s: the <em>samādhi</em> of emptiness, the <em>samādhi</em> without attributes, and the <em>samādhi</em> without actions.
 {:#p9}
 
 10\. “What are three things to be recognized? They are the three feelings: painful feelings, pleasant feelings, and feelings that are neither painful or pleasant.
@@ -65,7 +65,7 @@ The monks then accepted the teaching and listened.
 15\. “What are four things to be cultivated? The four abodes of mindfulness: [1] A monk observes internal body as body diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow. He observes internal and external body as body, diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow. <em>He likewise observes [2] feelings, [3] mind, and [4] teachings.</em>
 {:#p15}
 
-16\. “What are four things to be recognized? The four foods: physical food, food of contact, food of thought, and food of consciousness.
+16\. “What are four things to be recognized? The four foods: physical food, food of contact, food of thought, and food of awareness.
 {:#p16}
 
 17\. “What are four things to be ceased? The four acquisitions: the acquisition of desires, acquisition of self, acquisition of precepts, and acquisition of views.
@@ -82,16 +82,16 @@ The monks then accepted the teaching and listened.
 20\. “What are five things to be achieved? The five factors of complete cessation: First is faith in the Buddha, Tathāgata, and Arhat who perfected the ten epithets. Second is having no illness and being at peace. Third is being honest and having no deception about heading straight down the Tathāgata’s road to <em>nirvāṇa</em>. Fourth is mental focus that’s not confused and doesn’t forget the recitations. Fifth is skill in investigating the arising and cessation of things and ending the root of suffering with the noble practice.
 {:#p20}
 
-21\. “What are five things to be cultivated? The five faculties: faculty of faith, faculty of effort, faculty of mindfulness, faculty of samādhi, and faculty of wisdom.
+21\. “What are five things to be cultivated? The five faculties: faculty of faith, faculty of effort, faculty of mindfulness, faculty of <em>samādhi</em>, and faculty of wisdom.
 {:#p21}
 
-22\. “What are five things to be recognized? The five acquired aggregates: the acquired aggregate of form … feeling … conception … volition … the acquired aggregate of consciousness.
+22\. “What are five things to be recognized? The five acquired aggregates: the acquired aggregate of form … feeling … conception … volition … the acquired aggregate of awareness.
 {:#p22}
 
 23\. “What are five things to be ceased? The five hindrances: The hindrance of greed, hindrance of anger, hindrance of drowsiness, hindrance of restlessness, and hindrance of doubt.
 {:#p23}
 
-24\. “What are five things to be realized? The five collections of the adept: the adept’s collection of precepts, collection of samādhi, collection of wisdom, collection of liberation, and collection of the knowing and seeing of liberation.
+24\. “What are five things to be realized? The five collections of the adept: the adept’s collection of precepts, collection of <em>samādhi</em>, collection of wisdom, collection of liberation, and collection of the knowing and seeing of liberation.
 {:#p24}
 
 #### The Sixes
@@ -134,10 +134,10 @@ The monks then accepted the teaching and listened.
 36\. “What are seven things to be achieved? The seven kinds of wealth: wealth in faith, wealth in precepts, wealth in conscience, wealth in modesty, wealth in learning, wealth in generosity, and wealth in wisdom. These are the seven kinds of wealth.
 {:#p36}
 
-37\. “What are seven things to be cultivated? The seven awakenings. Here, a monk cultivates the awakening of mindfulness, which depends on being desireless, tranquil, and secluded. He cultivates the teaching … cultivates effort … cultivates joy … cultivates mildness … cultivates samādhi … cultivates equanimity, which depends on being desireless, tranquil, and secluded.
+37\. “What are seven things to be cultivated? The seven awakenings. Here, a monk cultivates the awakening of mindfulness, which depends on being desireless, tranquil, and secluded. He cultivates the teaching … cultivates effort … cultivates joy … cultivates mildness … cultivates <em>samādhi</em> … cultivates equanimity, which depends on being desireless, tranquil, and secluded.
 {:#p37}
 
-38\. “What are seven things to be recognized? The seven dwelling places of consciousness. If there are sentient beings of diverse bodies and diverse notions, these gods and humans are the first abode of consciousness. Again, there are sentient beings of diverse bodies but the same notions. When the Brahmas of the Ābhāsvara Heaven are first born there, that’s the second abode of consciousness. Again, there are sentient beings of the same bodies but diverse notions. These Ābhāsvara gods are the third abode of consciousness. Again, there are sentient beings of the same bodies and the same notions. These Śubhakṛtsnā gods are the fourth abode of consciousness. Again, there are sentient beings that dwell in the abode of space. This is the fifth abode of consciousness. Some dwell in the abode of consciousness. This is the sixth abode of consciousness. Some are in the abode of nothingness. This is the seventh abode of consciousness.
+38\. “What are seven things to be recognized? The seven dwelling places of awareness. If there are sentient beings of diverse bodies and diverse notions, these gods and humans are the first abode of awareness. Again, there are sentient beings of diverse bodies but the same notions. When the Brahmas of the Ābhāsvara Heaven are first born there, that’s the second abode of awareness. Again, there are sentient beings of the same bodies but diverse notions. These Ābhāsvara gods are the third abode of awareness. Again, there are sentient beings of the same bodies and the same notions. These Śubhakṛtsnā gods are the fourth abode of awareness. Again, there are sentient beings that dwell in the abode of space. This is the fifth abode of awareness. Some dwell in the abode of awareness. This is the sixth abode of awareness. Some are in the abode of nothingness. This is the seventh abode of awareness.
 {:#p38}
 
 39\. “What are seven things to be ceased? The seven tendencies: the tendency of craving for desires, tendency of craving existence, tendency of views, tendency of pride, tendency of anger, tendency of ignorance, and tendency of doubt.
@@ -175,19 +175,19 @@ The monks then accepted the teaching and listened.
 49\. “Also, he recognizes the law of arising and cessation with wisdom and heads for the noble’s end of suffering. This is the seventh cause and condition …
 {:#p49}
 
-50\. “Also, he observes the arising and ceasing nature of the five acquired aggregates: ‘This is form, form’s coming together, and form’s cessation. This is feeling … conception … volition … consciousness, consciousness’s coming together, and consciousness’s cessation.’ This is the eighth cause and condition that gains knowledge before the religious life is attained and that increases knowledge once it has been attained.
+50\. “Also, he observes the arising and ceasing nature of the five acquired aggregates: ‘This is form, form’s coming together, and form’s cessation. This is feeling … conception … volition … awareness, awareness’s coming together, and awareness’s cessation.’ This is the eighth cause and condition that gains knowledge before the religious life is attained and that increases knowledge once it has been attained.
 {:#p50}
 
-51\. “What are eight things to be cultivated? The noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
+51\. “What are eight things to be cultivated? The noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right <em>samādhi</em>.
 {:#p51}
 
 52\. “What are eight things to be recognized? The eight ways of the world: profit and decline, criticism and praise, admiration and censure, and pain and pleasure.
 {:#p52}
 
-53\. “What are eight things to be ceased? The eightfold wrong [path]: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong samādhi.
+53\. “What are eight things to be ceased? The eightfold wrong [path]: wrong view, wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong <em>samādhi</em>.
 {:#p53}
 
-54\. “What are eight things to be realized? The eight liberations: Form observed to be form is the first liberation. Observing external form without an internal perception of form is the second liberation. The liberation of purity is the third liberation. Going beyond notions of form, ceasing notions of anger, and abiding in the abode of space is the fourth liberation. Going beyond the abode of space and abiding in the abode of consciousness is the fifth liberation. Going beyond the abode of consciousness and abiding in the abode of nothingness is the sixth liberation. Going beyond the abode of nothingness and abiding the abode with and without conception is the seventh liberation. Going beyond the abode with and without conception and abiding in the cessation of concepts and perceptions is the eighth liberation.
+54\. “What are eight things to be realized? The eight liberations: Form observed to be form is the first liberation. Observing external form without an internal perception of form is the second liberation. The liberation of purity is the third liberation. Going beyond notions of form, ceasing notions of anger, and abiding in the abode of space is the fourth liberation. Going beyond the abode of space and abiding in the abode of awareness is the fifth liberation. Going beyond the abode of awareness and abiding in the abode of nothingness is the sixth liberation. Going beyond the abode of nothingness and abiding the abode with and without conception is the seventh liberation. Going beyond the abode with and without conception and abiding in the cessation of concepts and perceptions is the eighth liberation.
 {:#p54}
 
 #### The Nines
@@ -198,16 +198,16 @@ The monks then accepted the teaching and listened.
 56\. “What are nine things to be achieved? The nine factors of purified cessation: the precepts as a factor of purified cessation, the mind as a factor of purified cessation, views as a factor of purified cessation, going beyond doubt as a factor of purified cessation, discernment as a factor of purified cessation, the path as a factor of purified cessation, elimination as a factor of purified cessation, lacking desire as a factor of purified cessation, and liberation as a factor of purified cessation.
 {:#p56}
 
-57\. “What are nine things to be cultivated? The nine sources of joy: First is joy, second is love, third is delight, fourth is pleasure, fifth is samādhi, sixth is real knowledge, seventh is indifference, eighth is lacking desire, and ninth is liberation.
+57\. “What are nine things to be cultivated? The nine sources of joy: First is joy, second is love, third is delight, fourth is pleasure, fifth is <em>samādhi</em>, sixth is real knowledge, seventh is indifference, eighth is lacking desire, and ninth is liberation.
 {:#p57}
 
-58\. “What are nine things to be recognized? They are the nine abodes of sentient beings. Some sentient beings have diverse bodies and diverse notions. These gods and humans are the first abode of sentient beings. Some sentient beings have diverse bodies but the same notions. When the Brahmas of the Ābhāsvara Heaven are first born there, that’s the second abode of sentient beings. Some sentient beings have the same bodies but diverse notions. This Ābhāsvara Heaven is the third abode of sentient beings. Some sentient beings have the same bodies and the same notions. This Śubhakṛtsnā Heaven is the fourth abode of sentient beings. Some sentient beings lack conception or anything to perceive. This Asāṃjñika Heaven is the fifth abode of sentient beings. Again, some sentient beings dwell in the abode of space, which is the sixth abode of sentient beings. Again, some sentient beings dwell in the abode of consciousness, which is the seventh abode of sentient beings. Again, some sentient beings dwell in the abode of nothingness, which is the eighth abode of sentient beings. Again, some sentient beings dwell in the abode with and without conception, which is the ninth abode of sentient beings.
+58\. “What are nine things to be recognized? They are the nine abodes of sentient beings. Some sentient beings have diverse bodies and diverse notions. These gods and humans are the first abode of sentient beings. Some sentient beings have diverse bodies but the same notions. When the Brahmas of the Ābhāsvara Heaven are first born there, that’s the second abode of sentient beings. Some sentient beings have the same bodies but diverse notions. This Ābhāsvara Heaven is the third abode of sentient beings. Some sentient beings have the same bodies and the same notions. This Śubhakṛtsnā Heaven is the fourth abode of sentient beings. Some sentient beings lack conception or anything to perceive. This Asāṃjñika Heaven is the fifth abode of sentient beings. Again, some sentient beings dwell in the abode of space, which is the sixth abode of sentient beings. Again, some sentient beings dwell in the abode of awareness, which is the seventh abode of sentient beings. Again, some sentient beings dwell in the abode of nothingness, which is the eighth abode of sentient beings. Again, some sentient beings dwell in the abode with and without conception, which is the ninth abode of sentient beings.
 {:#p58}
 
 59\. “What are nine things to be ceased? The nine sources of craving: Because of craving, there’s pursuit. Because of pursuit, there’s gain. Because of gain, there’s use. Because of use, there’s desire. Because of desire, there’s attachment. Because of attachment, there’s jealousy. Because of jealousy, there’s clinging. Because of clinging, there’s guarding.
 {:#p59}
 
-60\. “What are nine things to be realized? The nine kinds of cessation: When the first dhyāna is entered, the thorn of sound is ceased. When the second dhyāna is entered, the thorns of perception and examination are ceased. When the third dhyāna is ceased, the thorn of joy is ceased. When the fourth dhyāna is entered, then the thorn of breathing is ceased. When the abode of space is entered, the thorn of perceiving form is ceased. When the abode of consciousness is entered, then the thorn of perceiving space is ceased. When the abode of nothingness is entered, the thorn of perceiving consciousness is ceased. When the abode with and without conception is entered, the thorn of perceiving nothingness is ceased. When the samādhi of complete cessation is entered, the thorns of conception and feeling are ceased.
+60\. “What are nine things to be realized? The nine kinds of cessation: When the first dhyāna is entered, the thorn of sound is ceased. When the second dhyāna is entered, the thorns of perception and examination are ceased. When the third dhyāna is ceased, the thorn of joy is ceased. When the fourth dhyāna is entered, then the thorn of breathing is ceased. When the abode of space is entered, the thorn of perceiving form is ceased. When the abode of awareness is entered, then the thorn of perceiving space is ceased. When the abode of nothingness is entered, the thorn of perceiving awareness is ceased. When the abode with and without conception is entered, the thorn of perceiving nothingness is ceased. When the <em>samādhi</em> of complete cessation is entered, the thorns of conception and feeling are ceased.
 {:#p60}
 
 #### The Tens
@@ -218,16 +218,16 @@ The monks then accepted the teaching and listened.
 62\. “What are ten things to be achieved? The ten ways of salvation: First, a monk is perfect regarding the 250 precepts and perfect in his behavior. He feels great anxiety when he sees a small infraction. He fully learns the precepts, and he doesn’t have any inclination to corruption. Second, he makes good friends. Third, his language is proper, and he has a great deal of patience. Fourth, he prefers to pursue the good teaching and disseminates it generously. Fifth, when religious practitioners undertake a task, he immediately goes to help them. He doesn’t regard it as troublesome, deals with difficulties, and instructs others to do the same. Sixth, he’s well-versed, able to retain what he learns, and isn’t ever forgetful. Seventh, he’s diligent in desisting from unskillful qualities and developing skillful qualities. Eighth, he constantly focuses on his own mindfulness without any other ideas, recalling his previous good conduct as though it were right in front of his eyes. Ninth, his wisdom is accomplished. He observes the law of arising and cessation and stops the source of suffering with the noble discipline. Tenth, he’s happy in a secluded dwelling focusing his attention and contemplating, and he isn’t agitated while he meditates.
 {:#p62}
 
-63\. “What are ten things to be cultivated? The ten right practices: right view, right intention, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
+63\. “What are ten things to be cultivated? The ten right practices: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, right <em>samādhi</em>, right liberation, and right knowledge.
 {:#p63}
 
 64\. “What are ten things to be recognized? The ten physical senses: the eye sense, ear sense, nose sense, tongue sense, body sense, sight sense, sound sense, odor sense, flavor sense, and touch sense.
 {:#p64}
 
-65\. “What are ten things to be ceased? They are the ten wrong practices: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong samādhi, wrong liberation, and wrong knowledge.
+65\. “What are ten things to be ceased? They are the ten wrong practices: wrong view, wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, wrong <em>samādhi</em>, wrong liberation, and wrong knowledge.
 {:#p65}
 
-66\. “What are ten things to be realized? The ten teachings of the adept: right view, right intention, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
+66\. “What are ten things to be realized? The ten teachings of the adept: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, right <em>samādhi</em>, right liberation, and right knowledge.
 {:#p66}
 
 67\. “Monks, this is called the teaching that increases one by one. Now, I’ve explained that teaching for you in this way. I’m the Tathāgata; I’ve provided all that I should for you. Having compassionately and courteously instructed you, you ought to endeavor to put it into practice.
