--- a/01_agama/samyukta/01/SA1_36.md
+++ b/01_agama/samyukta/01/SA1_36.md
@@ -26,7 +26,7 @@ next: SA1_37.html
     <td id='p3'>3. “Suppose an ascetic or priest says despite the impermanence, change, and insecurity of form: ‘I am better,’ ‘I am equal,’ or ‘I am inferior.’ How do they imagine that, not seeing truly? Suppose they say despite the impermanence, change, and insecurity of feeling … conception … volition … awareness: ‘I am better,’ ‘I am equal,’ or ‘I am inferior.’ How do they imagine that, not seeing truly?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6b7'>「輸屢那！於汝意云何？色為常、為無常耶？」</td>
+    <td class="ch" title='t99.2.6b7'>「輸屢那，於汝意云何？色為常、為無常耶？」</td>
     <td id='p4'>4. “Śroṇa, what do you think? Is form permanent or impermanent?”</td>
   </tr>
   <tr>
@@ -34,7 +34,7 @@ next: SA1_37.html
     <td>He replied, “Impermanent.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6b8'>「輸屢那！若無常，為是苦耶？」</td>
+    <td class="ch" title='t99.2.6b8'>「輸屢那，若無常，為是苦耶？」</td>
     <td id='p5'>5. “Śroṇa, if something is impermanent, is that painful?”</td>
   </tr>
   <tr>
@@ -42,7 +42,7 @@ next: SA1_37.html
     <td>He replied, “It’s painful.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6b9'>「輸屢那！若無常、苦，是變易法。 於意云何？ 聖弟子於中見色是我、異我、相在不？」</td>
+    <td class="ch" title='t99.2.6b9'>「輸屢那，若無常、苦，是變易法。 於意云何？ 聖弟子於中見色是我、異我、相在不？」</td>
     <td id='p6'>6. “Śroṇa, if something is impermanent and painful, it’s subject to change. What do you think? Would a noble disciple see form as self, different than self, or either being present in the other?”</td>
   </tr>
   <tr>
@@ -50,7 +50,7 @@ next: SA1_37.html
     <td>He replied, “No.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6b11'>「輸屢那！於意云何？ 受⋯想⋯行⋯識為常、為無常？」</td>
+    <td class="ch" title='t99.2.6b11'>「輸屢那，於意云何？ 受⋯想⋯行⋯識為常、為無常？」</td>
     <td id='p7'>7. “Śroṇa, what do you think? Is feeling … conception … volition … awareness permanent or impermanent?”</td>
   </tr>
   <tr>
@@ -66,7 +66,7 @@ next: SA1_37.html
     <td>He replied, “It’s painful.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6b13'>「輸屢那！識若無常、苦，是變易法。 於意云何？ 聖弟子於中見識是我、異我、相在不？」</td>
+    <td class="ch" title='t99.2.6b13'>「輸屢那，識若無常、苦，是變易法。 於意云何？ 聖弟子於中見識是我、異我、相在不？」</td>
     <td id='p9'>9. “Śroṇa, if awareness is impermanent and painful, this is something that’s subject to change. What do you think? Would a noble disciple see awareness as self, different than self, or either present in the other?”</td>
   </tr>
   <tr>
@@ -74,7 +74,7 @@ next: SA1_37.html
     <td>He replied, “No.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6b16'>「輸屢那！當知色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切色不是我、不異我、不相在。 是名如實知。</td>
+    <td class="ch" title='t99.2.6b16'>「輸屢那，當知色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切色不是我、不異我、不相在。 是名如實知。</td>
     <td id='p10'>10. “Śroṇa, you should know that whatever forms there are, whether past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, all those forms are not self, not different than self, and neither are present in the other. This is called truly knowing it.</td>
   </tr>
   <tr>
@@ -82,7 +82,7 @@ next: SA1_37.html
     <td id='p11'>11. “Thus, whatever feelings … conceptions … volitions … instances of awareness there are, whether past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, all those instances of awareness are not self, not different than self, and neither is present in the other. This is called truly knowing it.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.6b22'>「輸屢那！如是於色、受、想、行、識生厭，離欲、解脫，解脫知見： 『我生已盡，梵行已立，所作已作。自知不受後有。』」</td>
+    <td class="ch" title='t99.2.6b22'>「輸屢那，如是於色、受、想、行、識生厭，離欲、解脫，解脫知見： 『我生已盡，梵行已立，所作已作。自知不受後有。』」</td>
     <td id='p12'>12. “In this way, Śroṇa, one becomes disillusioned, becomes free of desire for, and becomes liberated from form, feeling, conception, volition, and awareness. Being liberated, they know and see: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
   </tr>
   <tr>
